bug of gst_amc_codec_configure
I'm using the master branch gst-plugins-bad on Android 7.1.2, the cpu is RK3229.
I notice something wrong in the gst_amc_code_configure()
, it does not accept a NULL value for its surface argument.
But according to Android's MediaCodec document, surface should be null for audio codec.
gst_amc_codec_configure (GstAmcCodec * codec, GstAmcFormat * format,
GstAmcSurfaceTexture * surface, GError ** err)
{
JNIEnv *env;
gint flags = 0;
g_return_val_if_fail (codec != NULL, FALSE);
g_return_val_if_fail (format != NULL, FALSE);
g_return_val_if_fail (GST_IS_AMC_SURFACE_TEXTURE_JNI (surface), FALSE); <-- HERE RETURNS FALSE IMMEDIATELY.